[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.13.5",
    "cfonts>=1.5.2",
    "colorama>=0.4.6",
    "discord-py>=2.6.3",
    "fake-useragent>=2.2.0",
    "flask>=3.1.2",
    "instaloader>=4.14.2",
    "pyfiglet>=1.0.4",
    "requests>=2.32.5",
]
